* changed syntax of locations to |url| or |url|(off,len,<sl,sc>,<el,ec>) * added "scheme" field for locations * fixed some bugs in field update for locations * since URL's became URI's there are many tiny changes throughout the code